--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/editar.comunicacion/editar.comunicacion.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/editar.comunicacion/editar.comunicacion.component.html
@@ -162,6 +162,112 @@
               </div>
       			</div>
 
+            <hr>
+            <!-- Fila para los Datos de Seleccion de Tipo de Comunicacion -->
+            <div class="row">
+                 <!-- Direccion Encargada del tema de la Comunicacion -->
+                 <div class="col-xs-12 col-sm-6 col-md-6">
+                   <div class="form-group">
+                     <select #idDireccionSreci="ngModel" class="form-control" name="idDireccionSreci" id="idDireccionSreci"
+                           ngControl="idDireccionSreci" [(ngModel)]="_editarComunicacionModel.idDireccionSreci" tabindex="8"
+                              (change)="getlistaSubDireccionesSRECIComVinculante()" >
+                         <option value="0">Sub Secretaría Responsable </option>
+                         <option *ngFor="let list of JsonOutgetlistaDireccionSRECI" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
+                     </select>
+                     <small class="form-text text-muted" *ngIf="idDireccionSreci.value == 0 || idDireccionSreci.value == null " >
+                       Debes Seleccionar una Sub Secretaría vinculante</small>
+                     <!-- <small class="form-text text-muted" *ngIf="idDireccionSreciComVinc.errors?.required" >Debes Seleccionar una Sub Secretaría responsable</small> -->
+                   </div>
+                </div>
+
+                <!-- SubDireccion Encargada del tema de la Comunicacion -->
+                <div class="col-xs-12 col-sm-6 col-md-6">
+                  <div class="form-group">
+                    <select #idDeptoFuncional="ngModel" class="form-control" name="idDeptoFuncional" id="idDeptoFuncional"
+                          ngControl="idDeptoFuncional" [(ngModel)]="_editarComunicacionModel.idDeptoFuncional" tabindex="9" >
+                        <option value="0">Dirección Responsable</option>
+                        <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECIComVinculantes" value="{{ list.idDeptoFuncional }}">{{ list.descDeptoFuncional }}</option>
+                    </select>
+                    <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >
+                      Debes Seleccionar una Dirección vinculante</small>
+                    <!-- <small class="form-text text-muted" *ngIf="idDeptoFuncional.errors?.required" >Debes Seleccionar una Dirección responsable</small> -->
+                  </div>
+                </div>
+            </div>
+
+            <!-- Fila de Tipo de Comunicaciones -->
+            <div class="row">
+                <!-- Tipo de Comunicacion -->
+                <div class="col-xs-12 col-sm-6 col-md-6">
+                  <div class="form-group">
+                    <select #idTipoDocumento="ngModel" class="form-control" name="idTipoDocumento"
+                          ngControl="idTipoDocumento" [(ngModel)]="_editarComunicacionModel.idTipoDocumento"  >
+                        <option value="0">Tipo de Comunicación</option>
+                        <option *ngFor="let list of JsonOutgetlistaTiposDocumentos" value="{{ list.idTipoDocumento }}" > {{ list.descTipoDocumento }}</option>
+                    </select>
+                    <small class="form-text text-muted" *ngIf="idTipoDocumento.value == 0 || idTipoDocumento.value == null " >Debes Seleccionar un Tipo de Comunicacion</small>
+                    <!-- <small class="form-text text-muted" *ngIf="idTipoDocumento.errors?.required" >Debes Seleccionar un Tipo de Comunicacion</small> -->
+                  </div>
+               </div>
+
+
+               <div class="col-xs-12 col-sm-6 col-md-6">
+                   <div class="panel panel-primary">
+                      <div class="panel-body text-center">
+                        <h6 title="Selecciona un Tipo de Comunicación, para Filtrar la Información a Seleccionar" class="text-on-pannel text-primary">
+                          <!-- Seleccion de COmunicacion de Ingreso -->
+                          <!-- Comunicacion de Ingreso -->
+                          <label class="custom-control custom-radio">
+                             <input id="radio1" name="radio" type="radio" class="custom-control-input fakeRadio" (change)="getlistaComunicacionVinculanteAll(1)">
+                             <span class="custom-control-indicator"></span>
+                             <span class="custom-control-description">Ingreso Com.</span>
+                          </label>
+
+                          <!-- Comunicacion de Salida -->
+                          <label class="custom-control custom-radio">
+                             <input id="radio2" name="radio" type="radio" class="custom-control-input fakeRadio" (change)="getlistaComunicacionVinculanteAll(2)">
+                             <span class="custom-control-indicator"></span>
+                             <span class="custom-control-description">Salida Com.</span>
+                          </label>
+
+                          <!-- Ambas opciones -->
+                          <label class="custom-control custom-radio">
+                             <input id="radio3" name="radio" type="radio" class="custom-control-input fakeRadio" (change)="getlistaComunicacionVinculanteAll(3)">
+                             <span class="custom-control-indicator"></span>
+                             <span class="custom-control-description">Ambas Com.</span>
+                          </label>
+                        </h6>
+                      </div>
+                  </div>
+                  <button type="button" (click)="cleanComunicacionVinculante()" class="btn btn-primary btn-sm">Limpiar Filtro</button>
+                </div>
+            </div>
+
+            <hr class="hr-new">
+
+            <!-- Fila para Seleccionar la(s) Comunicaciones Segun el Tipo -->
+            <div class="row">
+              <div class="col-xs-12 col-sm-12 col-md-12">
+      					<div class="form-group" >
+                    <angular2-multiselect [data]="itemComunicacionVincList" name="selectComVinc"
+                        [settings]="settingsComunicacionVinc"
+                        [(ngModel)]="selectedComunicacionVincItems"
+                        (onSelect)="onItemComVinculanteSelect($event)"
+                        (onDeSelect)="OnItemComVinculanteDeSelect($event)"
+                        (onSelectAll)="onSelectComVinculanteAll($event)"
+                        (onDeSelectAll)="onComVinculanteDeSelectAll($event)">
+                    </angular2-multiselect>
+                    <small class="form-text text-muted" >Selecciona la(s) Comunicaciones Vinculantes con la Actual</small>
+      					</div>
+      				</div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2 col-sm-2 col-md-2">
+                 <button title="Limpiar el los Filtros aplicados para Busqueda de la(s) Comunicacones Vinculantes" type="button" (click)="cleanComunicacionVinculante()" class="btn btn-primary btn-sm">Limpiar Filtro</button>
+              </div>
+            </div>
+
             <hr class="colorgraph">
             <!-- <input type="button" value="Limpiar" class="btn btn-success" tabindex="17"  style="cursor: pointer;" (click)="cleanForm()" > -->
             <a class="btn btn-warning" tabindex="17"  style="cursor: pointer;" (click)="cleanForm()"  name="button">
@@ -184,111 +290,6 @@
             <!-- Fin de Formulario -->
         </div>
 
-
-        <!-- Modal de Finalizar Actividad -->
-        <div *ngIf="idEstadoModal == 5 " class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
-              data-backdrop="static" data-keyboard="false">
-          <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" > <i class="material-icons">close</i> </button>
-                <h4 class="modal-title" id="myModalLabel">Comunicacion No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
-                <!-- Loader de Carga de los Datos -->
-                <div id="loader-2" *ngIf="loading_table == 'show'" >
-                  <img src="assets/images/loading_2.gif" alt="Cargando Tareas" style="width:25px;">
-                </div>
-              </div>
-
-              <div class="modal-body">
-                <!-- Formulario del Oficio Asignado -->
-                  <form #sendDocumentosCom="ngForm" (ngSubmit)="onSubmit(sendDocumentosCom)" name="sendDocumentosCom" role="form">
-                    <!-- fila 1 del Formulario -->
-                    <h4>Editar de Comunicación | SICDOC</h4>
-                    <hr class="colorgraph">
-
-                    <!-- fila 2 del Formulario -->
-                    <div class="row">
-                      <div class="col-md-12 mb-4">
-                        <small class="form-text text-muted">Ingresa la Justificación del Traslado de Comunicación</small>
-                        <textarea #justificacionTraslado="ngModel" type="text" name="justificacionTraslado" id="justificacionTraslado"
-                                ngControl="justificacionTraslado" [(ngModel)]="_editarComunicacionModel.justificacionTraslado" required maxlength="300" minlength="15"
-                                class="form-control" placeholder="Justificación para el Traslado de comunicacion" rows="3">
-                        </textarea>
-                        <small class="form-text text-muted" *ngIf="justificacionTraslado.errors?.required" >La Justificación es obligatoria</small>
-                        <small class="form-text text-muted" *ngIf="justificacionTraslado.errors?.minlength" >
-                            Se nesesita por lo menos {{ justificacionTraslado.errors.minlength.requiredLength }} caracteres</small>
-                      </div>
-                    </div>
-
-                    <!-- Fila de Funcioanrio a Trasladar -->
-                    <div class="row">
-                           <!-- Direccion Encargada del tema de la Comunicacion -->
-                           <div class="col-xs-12 col-sm-6 col-md-6">
-                             <div class="form-group">
-                               <select #idDireccionSreci="ngModel" class="form-control" name="idDireccionSreci" id="idDireccionSreci"
-                                     ngControl="idDireccionSreci" [(ngModel)]="_editarComunicacionModel.idDireccionSreci" tabindex="8"
-                                        (change)="getlistaSubDireccionesSRECI()" >
-                                   <option value="0">Sub Secretaría Responsable </option>
-                                   <option *ngFor="let list of JsonOutgetlistaDireccionSRECI" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
-                               </select>
-                               <small class="form-text text-muted" *ngIf="idDireccionSreci.value == 0 || idDireccionSreci.value == null " >
-                                 Debes Seleccionar una Sub Secretaría</small>
-                               <!-- <small class="form-text text-muted" *ngIf="idDireccionSreciComVinc.errors?.required" >Debes Seleccionar una Sub Secretaría responsable</small> -->
-                             </div>
-                          </div>
-
-                          <!-- SubDireccion Encargada del tema de la Comunicacion -->
-                          <div class="col-xs-12 col-sm-6 col-md-6">
-                            <div class="form-group">
-                              <select #idDeptoFuncional="ngModel" class="form-control" name="idDeptoFuncional" id="idDeptoFuncional"
-                                    ngControl="idDeptoFuncional" [(ngModel)]="_editarComunicacionModel.idDeptoFuncional" tabindex="9"
-                                    (change)="getlistaFuncionariosSreci()" >
-                                  <option value="0">Todas las Direcciones</option>
-                                  <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECI" value="{{ list.id }}">{{ list.itemName }}</option>
-                              </select>
-                              <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >
-                                Debes Seleccionar una Dirección</small>
-                              <!-- <small class="form-text text-muted" *ngIf="idDeptoFuncional.errors?.required" >Debes Seleccionar una Dirección responsable</small> -->
-                            </div>
-                          </div>
-
-
-                       <!-- Instituciones de la Comunicacion -->
-                       <div class="col-xs-12 col-sm-8 col-md-8">
-                          <div class="form-group">
-                              <angular2-multiselect [data]="itemList" name="selectFuncionarios"
-                                [settings]="settings" required
-                                [(ngModel)]="selectedItems"
-                                (onSelect)="onItemSelect($event)"
-                                (onDeSelect)="OnItemDeSelect($event)"
-                                (onSelectAll)="onSelectAll($event)"
-                                (onDeSelectAll)="onDeSelectAll($event)">
-                            </angular2-multiselect>
-                            <small class="form-text text-muted" >Debes Seleccionar el Funcionario que sera Responsable de la Comunicación</small>
-                            <!-- <small class="form-text text-muted" *ngIf="idDeptoFuncional.errors?.required" >Debes Seleccionar un Funcionario responsable</small> -->
-                          </div>
-                        </div>
-
-                     </div>
-
-                    <hr class="colorgraph">
-
-                    <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
-                    <!-- <button type="reset" class="btn btn-primary">Limpiar</button> -->
-                    <button class="btn btn-success" type="submit" [disabled]="!sendDocumentosCom.valid" style="cursor: pointer">
-                       <img src="assets/icons/comunicacion/diskette_24x24.png" alt="Cargando Imagen">
-                      Guardar Edición
-                    </button>
-                    <button  type="button" id="closeModalFinCom"
-                            class="btn btn-danger" data-dismiss="modal"  data-backdrop="static" data-keyboard="false" style="cursor: pointer">
-                      <img src="assets/icons/comunicacion/close.png" alt="">
-                     Cerrar
-                    </button>
-                </form>
-            </div>
-        </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-        </div>
 
         <!-- Columna para mostrar los Datos relalevantes de los Ingresos de Comunicaciones -->
         <div class="col-3">
